// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAB changes background-color to primary when primary is true 1`] = `
<withTheme(FAB)
  dark={true}
  icon="add"
  onPress={[MockFunction]}
  style={
    Object {
      "backgroundColor": "#3f51b5",
      "elevation": 0,
    }
  }
/>
`;

exports[`FAB changes background-color to secondary when primary is false 1`] = `
<withTheme(FAB)
  dark={true}
  icon="add"
  onPress={[MockFunction]}
  style={
    Object {
      "backgroundColor": "#ff4081",
      "elevation": 0,
    }
  }
/>
`;
